# Price-Prediction

./: .gitignore  Procfile  ProgressReport.md  README.md  requirements.txt
src/: MSFT.csv  Procfile  analyze.py  append_data.py  config.py  feature_engineering.py  financial_data.ipynb  get_data.py  main.py  missing_data.ipynb  ml.ipynb  mlflow.db  model.py  model_load.ipynb  new_ml_main_try.ipynb  pyproject.toml  queries.sql  query.py  requirements.txt  returns.ipynb  rf_learn.ipynb  rl_learning.ipynb  save_and_train_model.py  serve_model.ipynb  serve_model.py  stream_serve.py  train_and_save_model.py  trend_following.ipynb  whole_notebook.ipynb
src/data/: A.csv  AAL.csv  AAP.csv  AAPL.csv  ABBV.csv  ABC.csv  ABT.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADS.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AET.csv  AFL.csv  AIG.csv  AIV.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALK.csv  ALL.csv  ALLE.csv  AMAT.csv  AMD.csv  AME.csv  AMG.csv  AMGN.csv  AMP.csv  AMT.csv  AMZN.csv  ANDV.csv  ANSS.csv  ANTM.csv  (+420 more)
src/data_related/: create_tables.sql  populate_data.py
src/database/: __init__.py  create_tables.sql
src/existed_models/: model.pkl
src/mlruns/0/365c8d62a07e4d7680ba1b8790460a7f/: meta.yaml
src/mlruns/0/3d95ecbb389a4e73886909e741457b85/: meta.yaml
src/mlruns/0/9e985dc0808e4433a7e7ceec8e3c2f68/: meta.yaml
src/mlruns/0/a1fbca9589aa483bb3be8626ccd6d632/: meta.yaml
src/mlruns/0/a9e947d1b01f412286f412ade996cc8f/: meta.yaml
src/routers/: __init__.py  populate_data.py  populate_stocks.py
src/routers/data_in/: __init__.py  data_in.py
(+391 files in other folders)
