[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["utkusaglm <saglmutku@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
alpaca-trade-api = "^1.4.2"
requests = "^2.26.0"
psycopg2 = "^2.9.2"
asyncpg = "^0.25.0"
asyncio = "^3.4.3"
SQLAlchemy = "^1.4.28"
yfinance = "^0.1.67"
ipdb = "^0.13.9"
matplotlib = "^3.5.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
